--- a/lesson_10/nikita.palchinski/my_homework/doublemass/pom.xml
+++ b/lesson_10/nikita.palchinski/my_homework/doublemass/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>DoubleMass</groupId>
-    <artifactId>double-mass</artifactId>
+    <groupId>lesson_9</groupId>
+    <artifactId>lesson-9</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
@@ -16,11 +16,13 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+            <version>1.3</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+
 
 </project>
