--- a/lesson_9/nikita.palchinski/my_homework/pom.xml
+++ b/lesson_9/nikita.palchinski/my_homework/pom.xml
@@ -4,18 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>Lesson9HW</groupId>
-    <artifactId>lesson-9-hw</artifactId>
+    <groupId>lesson_9</groupId>
+    <artifactId>lesson-9</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-    <dependencies>
-       <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-       </dependency>
-    </dependencies>
 
 
 </project>
